<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/purple_200"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="99dp"
            android:layout_height="122dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_bernardo" />

        <LinearLayout
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pnombre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdentificacionCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pidentificacion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRazaCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/praza"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNivelCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pnivel"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="167dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_bone" />

                <TextView
                    android:id="@+id/tvLikeCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plike"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgCount"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_bone_yellow" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>